third_party/llvm-project/llvm/test/Bitcode/invalid-record-strtab.ll
; Bitcode with an invalid record that indexes a name outside of strtab.

; RUN: not llvm-dis %s.bc -o - 2>&1 | FileCheck %s

; CHECK: error: Invalid record
